force-app/main/default/objects/Provider__c/fields/Orthodontics_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Orthodontics_Conditions__c</fullName>
    <label>Orthodontics Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ankylosis of Tooth</fullName>
            </value>
            <value>
                <fullName>Apert Syndrome</fullName>
            </value>
            <value>
                <fullName>Canine Teeth, Absence Upper Permanent</fullName>
            </value>
            <value>
                <fullName>Chromosome 22q11 Deletion Syndrome</fullName>
            </value>
            <value>
                <fullName>Clefting - Ectropion - Conical Teeth</fullName>
            </value>
            <value>
                <fullName>Cleft Lip</fullName>
            </value>
            <value>
                <fullName>Cleft Lip and Palate</fullName>
            </value>
            <value>
                <fullName>Cleft Palate</fullName>
            </value>
            <value>
                <fullName>Cleidocranial Dysostosis</fullName>
            </value>
            <value>
                <fullName>Craniofacial Tumors</fullName>
            </value>
            <value>
                <fullName>Craniosynostosis</fullName>
            </value>
            <value>
                <fullName>Crooked Teeth</fullName>
            </value>
            <value>
                <fullName>Crossbite</fullName>
            </value>
            <value>
                <fullName>Crouzon Syndrome</fullName>
            </value>
            <value>
                <fullName>Dental Abnormalities</fullName>
            </value>
            <value>
                <fullName>Dental Crowding</fullName>
            </value>
            <value>
                <fullName>Dental Disorders</fullName>
            </value>
            <value>
                <fullName>Dental Irregularities</fullName>
            </value>
            <value>
                <fullName>Dental Spacing</fullName>
            </value>
            <value>
                <fullName>Ectodermal Dysplasia</fullName>
            </value>
            <value>
                <fullName>Facial Asymmetries</fullName>
            </value>
            <value>
                <fullName>Facial Fracture</fullName>
            </value>
            <value>
                <fullName>Facial Irregularities</fullName>
            </value>
            <value>
                <fullName>Gaps Between Teeth</fullName>
            </value>
            <value>
                <fullName>Gingival Fibromatosis - Dntl Abnormality</fullName>
            </value>
            <value>
                <fullName>Hemifacial Microsomia</fullName>
            </value>
            <value>
                <fullName>Hypodontia</fullName>
            </value>
            <value>
                <fullName>Jaw Fracture</fullName>
            </value>
            <value>
                <fullName>Malocclusion (Bad Bite)</fullName>
            </value>
            <value>
                <fullName>Malocclusion - Short Stature Syndrome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>