force-app/main/default/objects/Provider__c/fields/Orthodontics_Practicing_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Orthodontics_Practicing_Specialties__c</fullName>
    <label>SecondarOrthodonticPracticingSpecialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Orthodontics &amp; Dentofacial Orthopedics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>