force-app/main/default/objects/Provider__c/fields/Orthodontics_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Orthodontics_Procedures__c</fullName>
    <label>Orthodontics Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AcceleDent™ System</fullName>
            </value>
            <value>
                <fullName>Athletic Mouthguards</fullName>
            </value>
            <value>
                <fullName>Bite Adjustment</fullName>
            </value>
            <value>
                <fullName>Bracket Braces</fullName>
            </value>
            <value>
                <fullName>Buccal Tubes for Braces</fullName>
            </value>
            <value>
                <fullName>Ceramic Dental Braces</fullName>
            </value>
            <value>
                <fullName>Clear Ceramic Braces</fullName>
            </value>
            <value>
                <fullName>ClearCorrect™ Invisible Braces</fullName>
            </value>
            <value>
                <fullName>Clear Dental Braces</fullName>
            </value>
            <value>
                <fullName>Cleft Lip and Palate Repair</fullName>
            </value>
            <value>
                <fullName>Cone Beam 3D Imaging</fullName>
            </value>
            <value>
                <fullName>Cone Beam Computerized Tomography (CBCT)</fullName>
            </value>
            <value>
                <fullName>Corrective Jaw Surgery</fullName>
            </value>
            <value>
                <fullName>Cosmetic Oral Evaluation</fullName>
            </value>
            <value>
                <fullName>Cosmetic Procedure</fullName>
            </value>
            <value>
                <fullName>Damon® Clear Braces</fullName>
            </value>
            <value>
                <fullName>Damon® System</fullName>
            </value>
            <value>
                <fullName>Dental Brace</fullName>
            </value>
            <value>
                <fullName>Dental Brace and Headgear</fullName>
            </value>
            <value>
                <fullName>Dental X-Ray</fullName>
            </value>
            <value>
                <fullName>Digital Impression System</fullName>
            </value>
            <value>
                <fullName>Edgewise Dental Braces</fullName>
            </value>
            <value>
                <fullName>Facebow Headgear</fullName>
            </value>
            <value>
                <fullName>Facial Bone Fracture Repair</fullName>
            </value>
            <value>
                <fullName>Fixed Orthodontic Correction</fullName>
            </value>
            <value>
                <fullName>Glow in the Dark Dental Braces</fullName>
            </value>
            <value>
                <fullName>Gold Dental Braces</fullName>
            </value>
            <value>
                <fullName>Herbst® Appliance</fullName>
            </value>
            <value>
                <fullName>i-CAT® 3D Dental Imaging</fullName>
            </value>
            <value>
                <fullName>Incognito™ Invisible Braces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>