force-app/main/default/objects/Provider__c/fields/Pediatric_Dentistry_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Dentistry_Conditions__c</fullName>
    <label>Pediatric Dentistry Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ankylosis of Tooth</fullName>
            </value>
            <value>
                <fullName>Bad Taste in Mouth</fullName>
            </value>
            <value>
                <fullName>Bleeding Gums</fullName>
            </value>
            <value>
                <fullName>Broken Tooth</fullName>
            </value>
            <value>
                <fullName>Canker Sore</fullName>
            </value>
            <value>
                <fullName>Cavity</fullName>
            </value>
            <value>
                <fullName>Chipped Tooth</fullName>
            </value>
            <value>
                <fullName>Cleft Lip</fullName>
            </value>
            <value>
                <fullName>Cleft Lip and Palate</fullName>
            </value>
            <value>
                <fullName>Cleft Palate</fullName>
            </value>
            <value>
                <fullName>Cold Sore</fullName>
            </value>
            <value>
                <fullName>Cracked Tooth</fullName>
            </value>
            <value>
                <fullName>Dental Abnormalities</fullName>
            </value>
            <value>
                <fullName>Dental Disorders</fullName>
            </value>
            <value>
                <fullName>Dental Trauma</fullName>
            </value>
            <value>
                <fullName>Dentin Dysplasia, Coronal</fullName>
            </value>
            <value>
                <fullName>Dentin Dysplasia, Radicular</fullName>
            </value>
            <value>
                <fullName>Dentinogenesis Imperfecta</fullName>
            </value>
            <value>
                <fullName>Gingivitis</fullName>
            </value>
            <value>
                <fullName>Grinding of Teeth</fullName>
            </value>
            <value>
                <fullName>Gum Disease</fullName>
            </value>
            <value>
                <fullName>Halitosis</fullName>
            </value>
            <value>
                <fullName>Loose Teeth</fullName>
            </value>
            <value>
                <fullName>Oral Infection</fullName>
            </value>
            <value>
                <fullName>Orofacial Pain</fullName>
            </value>
            <value>
                <fullName>Periodontitis</fullName>
            </value>
            <value>
                <fullName>Plaque</fullName>
            </value>
            <value>
                <fullName>Plaque Buildup</fullName>
            </value>
            <value>
                <fullName>Teething</fullName>
            </value>
            <value>
                <fullName>Thumb Sucking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>