force-app/main/default/objects/Provider__c/fields/Pediatric_Dentistry_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Dentistry_Procedures__c</fullName>
    <label>Pediatric Dentistry Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fluoride Treatment</fullName>
            </value>
            <value>
                <fullName>Dental Extraction</fullName>
            </value>
            <value>
                <fullName>Dental Cleaning</fullName>
            </value>
            <value>
                <fullName>Dental Examination</fullName>
            </value>
            <value>
                <fullName>Pediatric Dental Exam</fullName>
            </value>
            <value>
                <fullName>Dental X-Ray</fullName>
            </value>
            <value>
                <fullName>Athletic Mouthguards</fullName>
            </value>
            <value>
                <fullName>Conscious Sedation</fullName>
            </value>
            <value>
                <fullName>Dental Bonding</fullName>
            </value>
            <value>
                <fullName>Dental Filling</fullName>
            </value>
            <value>
                <fullName>Dental Hygiene Services</fullName>
            </value>
            <value>
                <fullName>Dental Procedure</fullName>
            </value>
            <value>
                <fullName>Dental Prophylaxis</fullName>
            </value>
            <value>
                <fullName>Dental Prophylaxis, Child</fullName>
            </value>
            <value>
                <fullName>Dental Restoration</fullName>
            </value>
            <value>
                <fullName>Dental Sealant</fullName>
            </value>
            <value>
                <fullName>Digital X-Ray (CDR)</fullName>
            </value>
            <value>
                <fullName>Fixed Orthodontic Correction</fullName>
            </value>
            <value>
                <fullName>Fluoride Varnish</fullName>
            </value>
            <value>
                <fullName>Frenectomy</fullName>
            </value>
            <value>
                <fullName>Full Mouth Rehabilitation</fullName>
            </value>
            <value>
                <fullName>General Anesthesia</fullName>
            </value>
            <value>
                <fullName>Gum Disease Treatment</fullName>
            </value>
            <value>
                <fullName>Moderate Sedation</fullName>
            </value>
            <value>
                <fullName>Nitrous Oxide Administration</fullName>
            </value>
            <value>
                <fullName>Nitrous Oxide Sedation</fullName>
            </value>
            <value>
                <fullName>Oral Conscious Sedation</fullName>
            </value>
            <value>
                <fullName>Oral Sedation</fullName>
            </value>
            <value>
                <fullName>Oral Soft Tissue Assessment</fullName>
            </value>
            <value>
                <fullName>Panoramic Digital Dental X-Rays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>