force-app/main/default/objects/Provider__c/fields/Pediatric_Dermatology_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Dermatology_Conditions__c</fullName>
    <label>Pediatric Dermatology Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acanthosis Nigricans</fullName>
            </value>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Actinic Keratosis</fullName>
            </value>
            <value>
                <fullName>Angioedema</fullName>
            </value>
            <value>
                <fullName>Athlete&#39;s Foot</fullName>
            </value>
            <value>
                <fullName>Atopic Dermatitis (Eczema)</fullName>
            </value>
            <value>
                <fullName>Autoimmune Diseases</fullName>
            </value>
            <value>
                <fullName>Basal Cell Carcinoma</fullName>
            </value>
            <value>
                <fullName>Bedsores</fullName>
            </value>
            <value>
                <fullName>Benign Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Birthmark</fullName>
            </value>
            <value>
                <fullName>Blistering Diseases</fullName>
            </value>
            <value>
                <fullName>Boil (incl. Carbuncle)</fullName>
            </value>
            <value>
                <fullName>Burn Injuries</fullName>
            </value>
            <value>
                <fullName>Candidiasis of Skin and Nails</fullName>
            </value>
            <value>
                <fullName>Canker Sore</fullName>
            </value>
            <value>
                <fullName>Cellulitis</fullName>
            </value>
            <value>
                <fullName>Chickenpox</fullName>
            </value>
            <value>
                <fullName>Chronic Urticaria</fullName>
            </value>
            <value>
                <fullName>Cold Sore</fullName>
            </value>
            <value>
                <fullName>Cradle Cap</fullName>
            </value>
            <value>
                <fullName>Cutaneous Candidiasis</fullName>
            </value>
            <value>
                <fullName>Cutaneous Lymphoma</fullName>
            </value>
            <value>
                <fullName>Dandruff</fullName>
            </value>
            <value>
                <fullName>Dermatitis</fullName>
            </value>
            <value>
                <fullName>Dermatitis Due to Drugs</fullName>
            </value>
            <value>
                <fullName>Dermatitis Due to Food</fullName>
            </value>
            <value>
                <fullName>Dermatomyositis</fullName>
            </value>
            <value>
                <fullName>Discoid Lupus</fullName>
            </value>
            <value>
                <fullName>Discoid Lupus Erythematosus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>