force-app/main/default/objects/Provider__c/fields/Pediatric_Dermatology_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Dermatology_Procedures__c</fullName>
    <label>Pediatric Dermatology Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjacent Tissue Transfer</fullName>
            </value>
            <value>
                <fullName>Dermabrasion</fullName>
            </value>
            <value>
                <fullName>Dermal Filler</fullName>
            </value>
            <value>
                <fullName>Destruction of Benign Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Destruction of Malignant Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Destruction of Penile Lesion</fullName>
            </value>
            <value>
                <fullName>Electrocoagulation</fullName>
            </value>
            <value>
                <fullName>Endovenous Laser Treatment</fullName>
            </value>
            <value>
                <fullName>Excision of Benign Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Excision of Malignant Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Laser Surgery</fullName>
            </value>
            <value>
                <fullName>Laser Surgery for Skin Conditions</fullName>
            </value>
            <value>
                <fullName>Mohs Surgery</fullName>
            </value>
            <value>
                <fullName>Narrow Band UVB Light for Psoriasis</fullName>
            </value>
            <value>
                <fullName>Photodynamic Therapy (PDT)</fullName>
            </value>
            <value>
                <fullName>Repair of Pigmentation Defect</fullName>
            </value>
            <value>
                <fullName>Scar Revision Surgery</fullName>
            </value>
            <value>
                <fullName>Shaving of Skin Lesion</fullName>
            </value>
            <value>
                <fullName>Skin Cancer Removal</fullName>
            </value>
            <value>
                <fullName>Skin Excision for Hidradenitis</fullName>
            </value>
            <value>
                <fullName>Skin Grafts</fullName>
            </value>
            <value>
                <fullName>Skin Tag Removal</fullName>
            </value>
            <value>
                <fullName>Soft Tissue Tumor Removal</fullName>
            </value>
            <value>
                <fullName>Venous Sclerotherapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>