force-app/main/default/objects/Provider__c/fields/Pediatric_Ophthalmology_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Ophthalmology_Conditions__c</fullName>
    <label>Pediatric Ophthalmology Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquired Coloboma</fullName>
            </value>
            <value>
                <fullName>Adult Strabismus</fullName>
            </value>
            <value>
                <fullName>Alternating Hyperphoria</fullName>
            </value>
            <value>
                <fullName>Anisocoria</fullName>
            </value>
            <value>
                <fullName>Anterior Scleritis</fullName>
            </value>
            <value>
                <fullName>Aphakia and Other Disorders of Lens</fullName>
            </value>
            <value>
                <fullName>Astigmatism</fullName>
            </value>
            <value>
                <fullName>Benign Neoplasm of Choroid</fullName>
            </value>
            <value>
                <fullName>Benign Neoplasm of Eye</fullName>
            </value>
            <value>
                <fullName>Blepharitis</fullName>
            </value>
            <value>
                <fullName>Blindness</fullName>
            </value>
            <value>
                <fullName>Blocked Tear Duct</fullName>
            </value>
            <value>
                <fullName>Brawny Scleritis</fullName>
            </value>
            <value>
                <fullName>Chorioretinal Scars</fullName>
            </value>
            <value>
                <fullName>Chorioretinitis</fullName>
            </value>
            <value>
                <fullName>Chronic Dacryoadenitis</fullName>
            </value>
            <value>
                <fullName>Chronic Endophthalmitis</fullName>
            </value>
            <value>
                <fullName>Color Blindness</fullName>
            </value>
            <value>
                <fullName>Conjunctival Hemorrhage</fullName>
            </value>
            <value>
                <fullName>Contusion of the Eyeball</fullName>
            </value>
            <value>
                <fullName>Corneal Abrasion or Laceration</fullName>
            </value>
            <value>
                <fullName>Corneal Erosion</fullName>
            </value>
            <value>
                <fullName>Corneal Ulcer</fullName>
            </value>
            <value>
                <fullName>Cyclophoria</fullName>
            </value>
            <value>
                <fullName>Cyclotropia</fullName>
            </value>
            <value>
                <fullName>Dacryoadenitis</fullName>
            </value>
            <value>
                <fullName>Degenerative Disorders of Globe</fullName>
            </value>
            <value>
                <fullName>Diabetic Macular Edema (DME)</fullName>
            </value>
            <value>
                <fullName>Diabetic Retinopathy</fullName>
            </value>
            <value>
                <fullName>Drooping Eyelids (Ptosis)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>