force-app/main/default/objects/Provider__c/fields/Pediatric_Ophthalmology_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Pediatric_Ophthalmology_Procedures__c</fullName>
    <label>Pediatric Ophthalmology Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anterior Lamellar Keratoplasty (ALK)</fullName>
            </value>
            <value>
                <fullName>Anterior Vitrectomy</fullName>
            </value>
            <value>
                <fullName>Biopsy of Cornea</fullName>
            </value>
            <value>
                <fullName>Conjunctivoplasty</fullName>
            </value>
            <value>
                <fullName>Contact Lens</fullName>
            </value>
            <value>
                <fullName>Contact Lens Services</fullName>
            </value>
            <value>
                <fullName>Coreoplasty</fullName>
            </value>
            <value>
                <fullName>Corneal Tattooing</fullName>
            </value>
            <value>
                <fullName>Cyclocryotherapy</fullName>
            </value>
            <value>
                <fullName>Cyclodialysis</fullName>
            </value>
            <value>
                <fullName>Cyclodiathermy</fullName>
            </value>
            <value>
                <fullName>Dacryocystectomy</fullName>
            </value>
            <value>
                <fullName>Dacryocystorhinostomy</fullName>
            </value>
            <value>
                <fullName>Dacryocystostomy or Dacryocystotomy</fullName>
            </value>
            <value>
                <fullName>Destruction of Lesion of Retina/Choroid</fullName>
            </value>
            <value>
                <fullName>Dilation of Outflow Canal</fullName>
            </value>
            <value>
                <fullName>Drainage of Conjunctival Cyst</fullName>
            </value>
            <value>
                <fullName>Epikeratophakia</fullName>
            </value>
            <value>
                <fullName>Excision/Destruction of Lesion of Cornea</fullName>
            </value>
            <value>
                <fullName>Excision/Destruction of Lesion of Sclera</fullName>
            </value>
            <value>
                <fullName>Excision of Chalazion</fullName>
            </value>
            <value>
                <fullName>Extraocular Muscle Surgery</fullName>
            </value>
            <value>
                <fullName>Eyelid Reconstruction Surgery</fullName>
            </value>
            <value>
                <fullName>Eyelid Surgery</fullName>
            </value>
            <value>
                <fullName>Glaucoma Surgery</fullName>
            </value>
            <value>
                <fullName>Goniotomy</fullName>
            </value>
            <value>
                <fullName>Intracorneal Ring (ICR)</fullName>
            </value>
            <value>
                <fullName>Iridectomy</fullName>
            </value>
            <value>
                <fullName>Iridotomy</fullName>
            </value>
            <value>
                <fullName>Keratomileusis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>