force-app/main/default/objects/Provider__c/fields/Physical_Therapy_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy_Conditions__c</fullName>
    <label>Physical Therapy Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postoperative Complications</fullName>
            </value>
            <value>
                <fullName>Postoperative Pain</fullName>
            </value>
            <value>
                <fullName>Repetitive Strain Injuries</fullName>
            </value>
            <value>
                <fullName>Stiffness</fullName>
            </value>
            <value>
                <fullName>Abdominal Muscle Strain</fullName>
            </value>
            <value>
                <fullName>Accessory Navicular Bone</fullName>
            </value>
            <value>
                <fullName>Adolescent Idiopathic Scoliosis</fullName>
            </value>
            <value>
                <fullName>Ankle Laxity</fullName>
            </value>
            <value>
                <fullName>Bronchiectasis</fullName>
            </value>
            <value>
                <fullName>Dyspareunia</fullName>
            </value>
            <value>
                <fullName>Hand Tendon Injuries</fullName>
            </value>
            <value>
                <fullName>Post-Infectious Reactive Arthropathy</fullName>
            </value>
            <value>
                <fullName>Postoperative Hip Fracture</fullName>
            </value>
            <value>
                <fullName>Renal Failure-Like Electrolyte Imbalance</fullName>
            </value>
            <value>
                <fullName>Strain of Hamstring Muscle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>