force-app/main/default/objects/Provider__c/fields/Physical_Therapy_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy_Procedures__c</fullName>
    <label>Physical Therapy Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobility Exercise</fullName>
            </value>
            <value>
                <fullName>Orthopedic Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Pain Management Through Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Pediatric Rehabilitation Services</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Post-Surgical Rehabilitaion</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Therapy</fullName>
            </value>
            <value>
                <fullName>Trauma Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Wellness Coaching</fullName>
            </value>
            <value>
                <fullName>Active Release Technique</fullName>
            </value>
            <value>
                <fullName>Aquatic Therapy</fullName>
            </value>
            <value>
                <fullName>Dry Needling</fullName>
            </value>
            <value>
                <fullName>Electrical Stimulation</fullName>
            </value>
            <value>
                <fullName>Muscular Endurance Development Exercise</fullName>
            </value>
            <value>
                <fullName>Myofascial Release Therapy</fullName>
            </value>
            <value>
                <fullName>Neurological Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Range of Motion Testing</fullName>
            </value>
            <value>
                <fullName>Rehabilitation After Stroke or Trauma</fullName>
            </value>
            <value>
                <fullName>Spine and Sports Musculoskeletal Rehab</fullName>
            </value>
            <value>
                <fullName>Spine Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Stroke Rehabilitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>