force-app/main/default/objects/Provider__c/fields/Plastic_Surgery_Additional_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Surgery_Additional_Conditions__c</fullName>
    <label>Plastic Surgery Additional Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cleft Lip</fullName>
            </value>
            <value>
                <fullName>Cleft Lip and Palate</fullName>
            </value>
            <value>
                <fullName>Cleft Palate</fullName>
            </value>
            <value>
                <fullName>Congenital Nasal Deformity</fullName>
            </value>
            <value>
                <fullName>Fracture of Hand (incl. Fingers)</fullName>
            </value>
            <value>
                <fullName>Nose Injuries</fullName>
            </value>
            <value>
                <fullName>Polydactyly</fullName>
            </value>
            <value>
                <fullName>Rhinophyma</fullName>
            </value>
            <value>
                <fullName>Syndactyly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>