force-app/main/default/objects/Provider__c/fields/Plastic_Surgery_Additional_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Surgery_Additional_Procedures__c</fullName>
    <label>Plastic Surgery Additional Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cosmetic Neck Surgery</fullName>
            </value>
            <value>
                <fullName>Dislocation Treatment</fullName>
            </value>
            <value>
                <fullName>Excision of Metacarpal and Carpal</fullName>
            </value>
            <value>
                <fullName>Facelift</fullName>
            </value>
            <value>
                <fullName>Finger Amputation</fullName>
            </value>
            <value>
                <fullName>Hand/Wrist Fracture/Dislocation Trtmnt</fullName>
            </value>
            <value>
                <fullName>Ligmnt Recnstrctn/Tendon Interposition</fullName>
            </value>
            <value>
                <fullName>Lip Augmentation</fullName>
            </value>
            <value>
                <fullName>Lip Surgery</fullName>
            </value>
            <value>
                <fullName>LRTI for the Thumb</fullName>
            </value>
            <value>
                <fullName>Plastic Surgical Procedures</fullName>
            </value>
            <value>
                <fullName>Wrist Fusion</fullName>
            </value>
            <value>
                <fullName>Wrist Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>